[package]
name = "libp2p_tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
libp2p = { version = "0.53", features = [
  "tokio",
  "gossipsub",
  "mdns",
  "noise",
  "macros",
  "tcp",
  "yamux",
  "quic",
  "tls",
  "dns",
  "async-std",
  "websocket",
  "ping",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "chat_app"
path = "src/bin/chat_app/main.rs"
